--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -1,11 +1,12 @@
 .storybook-button {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   border: 0;
-  border-radius: 3em;
+  border-radius: .2em;
   cursor: pointer;
   display: inline-block;
   line-height: 1;
+  letter-spacing: .03rem;
 }
 .storybook-button--primary {
   color: white;
@@ -26,5 +27,9 @@
 }
 .storybook-button--large {
   font-size: 16px;
+  padding: 12px 24px;
+}
+.storybook-button--xlarge {
+  font-size: 18px;
   padding: 12px 24px;
 }
