--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,29 @@
 @import './tailwind-input.css';
-@import './base.css';
+/* @import './base.css'; */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  position: relative;
+  font-weight: normal;
+}
+
+body {
+  min-height: 100vh;
+  /* background: var(--color-background); */
+  transition: color 0.5s, background-color 0.5s;
+  line-height: 1.6;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+  Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 15px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* color: var(--color-text); */
+  /* @apply text-gray-800 dark:text-white; */
+}
 
 #app {
   max-width: 1280px;
@@ -11,13 +35,13 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
+  @apply text-sky-700 dark:text-white;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    @apply text-sky-500 dark:text-white;
   }
 }
 
