--- a/src/stories/page.css
+++ b/src/stories/page.css
@@ -1,3 +1,4 @@
+
 section {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
@@ -5,71 +6,139 @@ section {
   padding: 48px 20px;
   margin: 0 auto;
   max-width: 600px;
-  /* @apply text-gray-800 dark:text-white; */
 }
 
-section h2 {
-  font-weight: 900;
-  font-size: 32px;
-  line-height: 1;
-  margin: 0 0 4px;
-  display: inline-block;
-  vertical-align: top;
-  @apply text-sky-600 dark:text-sky-200;
+@media (prefers-color-scheme: light) {
+  section h2 {
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 1;
+    margin: 0 0 4px;
+    display: inline-block;
+    vertical-align: top;
+    @apply text-sky-500;
+  }
+
+  section p {
+    margin: 1em 0;
+    /* @apply text-gray-800 !important; */
+    @apply text-gray-800;
+    color: red;
+  }
+  section a {
+    text-decoration: none;
+    @apply text-sky-600;
+  }
+
+  section ul {
+    padding-left: 30px;
+    margin: 1em 0;
+    @apply text-gray-800;
+  }
+
+  section li {
+    margin-bottom: 8px;
+    @apply text-gray-800;
+  }
+
+  section .tip {
+    display: inline-block;
+    border-radius: 1em;
+    font-size: 11px;
+    line-height: 12px;
+    font-weight: 700;
+    /* background: #e7fdd8; */
+    padding: 4px 12px;
+    margin-right: 10px;
+    vertical-align: top;
+    @apply text-white bg-sky-500 ;
+  }
+
+  section .tip-wrapper {
+    font-size: 13px;
+    line-height: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    @apply text-gray-800;
+  }
+
+  section .tip-wrapper svg {
+    display: inline-block;
+    height: 12px;
+    width: 12px;
+    margin-right: 4px;
+    vertical-align: top;
+    margin-top: 3px;
+  }
+
+  section .tip-wrapper svg path {
+    /* fill: var(--aqua); */
+    @apply fill-sky-600;
+  }
 }
 
-section p {
-  margin: 1em 0;
-  /* @apply text-gray-800 dark:text-white; */
-  @apply text-gray-800 dark:text-gray-50;
-}
+@media (prefers-color-scheme: dark) {
+  section h2 {
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 1;
+    margin: 0 0 4px;
+    display: inline-block;
+    vertical-align: top;
+    @apply text-sky-600;
+  }
+  section p {
+    margin: 1em 0;
+    @apply text-gray-800;
+  }
 
-section a {
-  text-decoration: none;
-  @apply text-sky-600 dark:text-white;
-}
+  section a {
+    text-decoration: none;
+    @apply text-sky-800;
+  }
 
-section ul {
-  padding-left: 30px;
-  margin: 1em 0;
-  @apply text-gray-800 dark:text-white;
-}
+  section ul {
+    padding-left: 30px;
+    margin: 1em 0;
+    @apply text-gray-800;
+  }
 
-section li {
-  margin-bottom: 8px;
-  @apply text-gray-800 dark:text-white;
-}
+  section li {
+    margin-bottom: 8px;
+    @apply text-gray-800;
+  }
 
-section .tip {
-  display: inline-block;
-  border-radius: 1em;
-  font-size: 11px;
-  line-height: 12px;
-  font-weight: 700;
-  /* background: #e7fdd8; */
-  padding: 4px 12px;
-  margin-right: 10px;
-  vertical-align: top;
-  @apply text-white dark:to-sky-900 bg-sky-500 dark:bg-white;
-}
+  section .tip {
+    display: inline-block;
+    border-radius: 1em;
+    font-size: 11px;
+    line-height: 12px;
+    font-weight: 700;
+    /* background: #e7fdd8; */
+    padding: 4px 12px;
+    margin-right: 10px;
+    vertical-align: top;
+    @apply bg-sky-500 text-white;
+  }
 
-section .tip-wrapper {
-  font-size: 13px;
-  line-height: 20px;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  @apply text-gray-800 dark:text-white;
-}
+  section .tip-wrapper {
+    font-size: 13px;
+    line-height: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    @apply text-gray-800;
+  }
 
-section .tip-wrapper svg {
-  display: inline-block;
-  height: 12px;
-  width: 12px;
-  margin-right: 4px;
-  vertical-align: top;
-  margin-top: 3px;
-}
+  section .tip-wrapper svg {
+    display: inline-block;
+    height: 12px;
+    width: 12px;
+    margin-right: 4px;
+    vertical-align: top;
+    margin-top: 3px;
+  }
 
-section .tip-wrapper svg path {
-  fill: var(--aqua);
+  section .tip-wrapper svg path {
+    @apply fill-sky-600;
+  }
 }
