--- a/src/assets/css/storybook.css
+++ b/src/assets/css/storybook.css
@@ -1,24 +1,9 @@
 html:not(.dark) > .sb-show-main {
 	/* replace color */
-	background: white !important;
+	background: #f5f5f5;
 }
 
 .dark > .sb-show-main {
 	/* replace color */
-	background: black !important;
-}
-
-@media (prefers-color-scheme: dark) {
-	.dark > .sb-show-main {
-		/* replace color */
-		/* color: white; */
-		background: black !important;
-	}
-}
-@media (prefers-color-scheme: light) {
-	html:not(.dark) > .sb-show-main {
-		/* replace color */
-		/* color: black; */
-		background: white !important;
-	}
+	background: #121212;
 }
